WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
228676
[JSC] Yarr should use Bitmap instead of ByteVector for BoyerMoore search
https://bugs.webkit.org/show_bug.cgi?id=228676
Summary
[JSC] Yarr should use Bitmap instead of ByteVector for BoyerMoore search
Yusuke Suzuki
Reported
2021-07-31 00:05:47 PDT
[JSC] Yarr should use Bitmap instead of ByteVector for BoyerMoore search
Attachments
Patch
(17.69 KB, patch)
2021-07-31 00:10 PDT
,
Yusuke Suzuki
no flags
Details
Formatted Diff
Diff
Patch
(17.29 KB, patch)
2021-07-31 00:14 PDT
,
Yusuke Suzuki
no flags
Details
Formatted Diff
Diff
Patch
(17.35 KB, patch)
2021-07-31 00:20 PDT
,
Yusuke Suzuki
no flags
Details
Formatted Diff
Diff
Patch
(17.49 KB, patch)
2021-07-31 13:51 PDT
,
Yusuke Suzuki
saam
: review+
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
Yusuke Suzuki
Comment 1
2021-07-31 00:10:39 PDT
Created
attachment 434690
[details]
Patch
Yusuke Suzuki
Comment 2
2021-07-31 00:14:13 PDT
Created
attachment 434691
[details]
Patch
Yusuke Suzuki
Comment 3
2021-07-31 00:20:17 PDT
Created
attachment 434692
[details]
Patch
Yusuke Suzuki
Comment 4
2021-07-31 13:51:45 PDT
Created
attachment 434703
[details]
Patch
Saam Barati
Comment 5
2021-08-02 10:14:24 PDT
Comment on
attachment 434703
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=434703&action=review
> Source/JavaScriptCore/yarr/YarrJIT.cpp:2428 > + auto matched = branchTestBit64(NonZero, regT2, regT0); // We can ignore upper bits since module-64 is performed.
module->modulo The instruction itself performs modulo 64?
Saam Barati
Comment 6
2021-08-02 10:14:34 PDT
r=me
Yusuke Suzuki
Comment 7
2021-08-02 10:39:57 PDT
Comment on
attachment 434703
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=434703&action=review
Thanks!
>> Source/JavaScriptCore/yarr/YarrJIT.cpp:2428 >> + auto matched = branchTestBit64(NonZero, regT2, regT0); // We can ignore upper bits since module-64 is performed. > > module->modulo > > The instruction itself performs modulo 64?
Yes.
https://www.felixcloutier.com/x86/bt
Yusuke Suzuki
Comment 8
2021-08-02 10:46:42 PDT
Committed
r280544
(
240171@main
): <
https://commits.webkit.org/240171@main
>
Radar WebKit Bug Importer
Comment 9
2021-08-02 10:47:18 PDT
<
rdar://problem/81419055
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug