Source/JavaScriptCore/yarr/YarrJIT.h
@@ -90,18 +90,6 @@ private:
     bool m_isMaskEffective { false };
 };
 
-class BoyerMooreByteVector : public std::array<uint8_t, BoyerMooreBitmap::mapSize> {
-    WTF_MAKE_FAST_ALLOCATED;
-public:
-    BoyerMooreByteVector(const BoyerMooreBitmap::Map& map)
-    {
-        fill(0);
-        map.forEachSetBit([&](unsigned index) {
-            (*this)[index] = 1;
-        });
-    }
-};
-
 #if CPU(ARM64E)
 extern "C" EncodedMatchResult vmEntryToYarrJIT(const void* input, UCPURegister start, UCPURegister length, int* output, MatchingContextHolder* matchingContext, const void* codePtr);
 extern "C" void vmEntryToYarrJITAfter(void);
@@ -124,14 +112,14 @@ public:
 
     bool has8BitCode() { return m_ref8.size(); }
     bool has16BitCode() { return m_ref16.size(); }
-    void set8BitCode(MacroAssemblerCodeRef<Yarr8BitPtrTag> ref, Vector<UniqueRef<BoyerMooreByteVector>> maps)
+    void set8BitCode(MacroAssemblerCodeRef<Yarr8BitPtrTag> ref, Vector<UniqueRef<BoyerMooreBitmap::Map>> maps)
     {
         m_ref8 = ref;
         m_maps.reserveCapacity(m_maps.size() + maps.size());
         for (unsigned index = 0; index < maps.size(); ++index)
             m_maps.uncheckedAppend(WTFMove(maps[index]));
     }
-    void set16BitCode(MacroAssemblerCodeRef<Yarr16BitPtrTag> ref, Vector<UniqueRef<BoyerMooreByteVector>> maps)
+    void set16BitCode(MacroAssemblerCodeRef<Yarr16BitPtrTag> ref, Vector<UniqueRef<BoyerMooreBitmap::Map>> maps)
     {
         m_ref16 = ref;
         m_maps.reserveCapacity(m_maps.size() + maps.size());
@@ -141,14 +129,14 @@ public:
 
     bool has8BitCodeMatchOnly() { return m_matchOnly8.size(); }
     bool has16BitCodeMatchOnly() { return m_matchOnly16.size(); }
-    void set8BitCodeMatchOnly(MacroAssemblerCodeRef<YarrMatchOnly8BitPtrTag> matchOnly, Vector<UniqueRef<BoyerMooreByteVector>> maps)
+    void set8BitCodeMatchOnly(MacroAssemblerCodeRef<YarrMatchOnly8BitPtrTag> matchOnly, Vector<UniqueRef<BoyerMooreBitmap::Map>> maps)
     {
         m_matchOnly8 = matchOnly;
         m_maps.reserveCapacity(m_maps.size() + maps.size());
         for (unsigned index = 0; index < maps.size(); ++index)
             m_maps.uncheckedAppend(WTFMove(maps[index]));
     }
-    void set16BitCodeMatchOnly(MacroAssemblerCodeRef<YarrMatchOnly16BitPtrTag> matchOnly, Vector<UniqueRef<BoyerMooreByteVector>> maps)
+    void set16BitCodeMatchOnly(MacroAssemblerCodeRef<YarrMatchOnly16BitPtrTag> matchOnly, Vector<UniqueRef<BoyerMooreBitmap::Map>> maps)
     {
         m_matchOnly16 = matchOnly;
         m_maps.reserveCapacity(m_maps.size() + maps.size());
@@ -250,11 +238,11 @@ public:
         m_failureReason = std::nullopt;
     }
 
-    const uint8_t* tryReuseBoyerMooreByteVector(unsigned index, BoyerMooreByteVector& vector) const
+    const BoyerMooreBitmap::Map::WordType* tryReuseBoyerMooreBitmap(const BoyerMooreBitmap::Map& map) const
     {
-        if (index < m_maps.size()) {
-            if (m_maps[index].get() == vector)
-                return m_maps[index]->data();
+        for (auto& stored : m_maps) {
+            if (stored.get() == map)
+                return stored->storage();
         }
         return nullptr;
     }
@@ -264,7 +252,7 @@ private:
     MacroAssemblerCodeRef<Yarr16BitPtrTag> m_ref16;
     MacroAssemblerCodeRef<YarrMatchOnly8BitPtrTag> m_matchOnly8;
     MacroAssemblerCodeRef<YarrMatchOnly16BitPtrTag> m_matchOnly16;
-    Vector<UniqueRef<BoyerMooreByteVector>> m_maps;
+    Vector<UniqueRef<BoyerMooreBitmap::Map>> m_maps;
     bool m_usesPatternContextBuffer { false };
     std::optional<JITFailureReason> m_failureReason;
 };
